unpackaged/main/default/objects/Assignment_Group_Name__c/Assignment_Group_Name__c.object-meta.xml
<CustomObject>
    <label>Assignment Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>