unpackaged/main/default/objects/Assignment_Group_Name__c/fields/Count_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Users__c</fullName>
    <inlineHelpText>Max number of user that can be assigned is 1000</inlineHelpText>
    <label>Count of Users</label>
    <summaryForeignKey>Assignment_Groups__c.Group_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>