unpackaged/main/default/objects/Assignment_Group_Name__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>