unpackaged/main/default/objects/Assignment_Group_Name__c/listViews/Dental_Florida_Assignment_Group_Name.listView-meta.xml
<ListView>
    <fullName>Dental_Florida_Assignment_Group_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>Dental Florida</label>
    <queue>Dental_Florida</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>