unpackaged/main/default/objects/Assignment_Group_Name__c/listViews/Dental_LSV_Assignment_Group_Name.listView-meta.xml
<ListView>
    <fullName>Dental_LSV_Assignment_Group_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>Dental LSV</label>
    <queue>Dental_LSV</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>