unpackaged/main/default/objects/Assignment_Group_Name__c/listViews/Dental_OpsdpmSolutions_Assignment_Group_Name.listView-meta.xml
<ListView>
    <fullName>Dental_OpsdpmSolutions_Assignment_Group_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>Dental OpsdpmSolutions</label>
    <queue>Dental_OpsdpmSolutions</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>