unpackaged/main/default/objects/Assignment_Group_Name__c/listViews/Dental_Regence_Assignment_Group_Name.listView-meta.xml
<ListView>
    <fullName>Dental_Regence_Assignment_Group_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>Dental Regence</label>
    <queue>Dental_Regence</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>